Avoid using the C++11 auto keyword, which was introduced in r328555, as part of an upstream change.  This is not supported by gcc 4.2.1, which is still the default system compiler for some architectures.

Direct commit to stable/9 and stable/10, since this does not apply to
stable/11 and head.

Reported by:	jau@iki.fi
PR:		202665,226068